# REPL-R

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  setup.ps1  setup.sh  turbo.json  vercel.json
apps/api/: README.md  pyproject.toml  run.py
apps/api/src/repl_ay_api/: __init__.py  auth.py  config.py  database.py  main.py  middleware.py
apps/api/src/repl_ay_api/models/: events.py
apps/api/src/repl_ay_api/routers/: auth.py  events.py  health.py  projects.py  traces.py
apps/api/src/repl_ay_api/services/: crew_executor.py
apps/dashboard/: package.json  pnpm-lock.yaml
database/: README.md  add_crew_table.sql  clickhouse_schema.sql  clickhouse_schema_dev.sql  clickhouse_schema_simple.sql  docker-compose.yml  init.sql  postgresql_schema.sql  postgresql_schema_dev.sql
design/banner/: banner.psd
design/logo/: logo.psd
docs/: implementation-roadmap.md
docs/api/: api-specification.md
docs/backend/: database-schema.md
docs/gdpr/: compliance-framework.md
examples/: content_creation_crew.py  manual_instrumentation.py
repl-ay-app/: CSP_OAUTH_FIXED.md  Dockerfile  GOOGLE_AUTH_DEBUG.md  HTTPS_OAUTH_SETUP.md  POPUP_IMPROVEMENTS.md  README.md  STRIPE_SETUP.md  debug-stripe.js  docker-stripe-setup.sh  drizzle.config.ts  https-server.js  next.config.ts  package-lock.json  package.json  server.js  stripe-browser-test.js  stripe-setup.sh  vercel.json  webhook-test-bypass.txt
repl-ay-app/drizzle/: 0000_lively_cable.sql
repl-ay-app/drizzle/meta/: 0000_snapshot.json  _journal.json
repl-ay-app/public/: manifest.json
repl-ay-app/src/: middleware.ts
repl-ay-app/src/app/: globals.css  layout.tsx  page-old.tsx  page.tsx
repl-ay-app/src/components/: AgentCrewStudio.tsx  AuthButton.tsx  AuthManager.tsx  AuthModal.tsx  ChatInterface-broken.tsx  ChatInterface-broken2.tsx  ChatInterface-fixed.tsx  ChatInterface.tsx  GoogleScriptLoader.tsx  LazyModal.tsx  Logo.tsx  MainNavigation.tsx  ModelSelector.tsx  OnboardingCheck.tsx  PricingModal.tsx  PricingPage.tsx  PromptStudio.tsx  UserOnboardingModal.tsx  UserProfileDropdown.tsx  WhitelistPage.tsx
repl-ay-app/src/contexts/: AuthContext.tsx
repl-ay-app/src/lib/: AIModelService.ts  AuthUtils.ts  MailerLiteService.ts  UserService.ts  (+6 more)
(+30 files in other folders)
